packages/typ/tests/fixtures/diagnostics/0288_fun_polymorphic_record_field_mismatch_05.ml.expected
File "0288_fun_polymorphic_record_field_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0288_fun_polymorphic_record_field_mismatch_05 is not a valid module name.

File "0288_fun_polymorphic_record_field_mismatch_05.ml", line 2, characters 49-59:
2 | let bad_epsilon : poly_epsilon = { run_epsilon = fun _ -> 4 }
                                                     ^^^^^^^^^^
Error: This field value has type int -> int which is less general than
         'a. 'a -> 'a
       The type int is not a type variable.
